# LyoPRONTO

./: .aidigestignore  .coverage  .cursorrules  .gitignore  404.html  CONTRIBUTING.md  README.md  TEST_COVERAGE_PLAN.md  __init__.py  coverage.xml  debug_warnings.py  environment.yml  ex_knownRp_PD.py  ex_unknownRp_PD.py  index.html  latest  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_local_ci.sh  setup.py  versions.json
.github/: copilot-examples.md  copilot-instructions.md
dev/: 404.html  index.html  objects.inv
docs/: ARCHITECTURE.md  CALC_UNKNOWNRP_TESTS_COMPLETE.md  CI_PERFORMANCE_OPTIMIZATION.md  CI_QUICK_REFERENCE.md  CI_SETUP.md  CI_SETUP_COMPLETE.md  CI_WORKFLOW_GUIDE.md  CI_WORKFLOW_RECOMMENDATION.md  CLEANUP_COMPLETE.md  COEXISTENCE_PHILOSOPHY.md  DEVELOPMENT_LOG.md  EXAMPLE_INTEGRATION_COMPLETE.md  GETTING_STARTED.md  LOW_COVERAGE_ANALYSIS.md  OPTIMIZER_TESTS_COMPLETE.md  PARALLEL_TESTING.md  PARALLEL_TESTING_COMPLETE.md  PHYSICS_REFERENCE.md  PYOMO_ROADMAP.md  README.md  REPOSITORY_CLEANUP.md  SLOW_TEST_STRATEGY.md  TESTING_INFRASTRUCTURE_ASSESSMENT.md  TESTING_STRATEGY.md  TEST_DIRECTORY_REVIEW.md  TEST_RENAME_COMPLETE.md  dev.md  explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
examples/: README.md  example_design_space.py  example_freezing.py  example_optimizer.py  example_parameter_estimation.py  example_web_interface.py
explanation/: index.html
how-to-guides/: index.html
lyopronto/: __init__.py  calc_knownRp.py  calc_unknownRp.py  constant.py  design_space.py  freezing.py  functions.py  high_level.py  opt_Pch.py  opt_Pch_Tsh.py  opt_Tsh.py  plot_styling.py
pr-10/: 404.html  index.html  objects.inv
pr-3/: 404.html  index.html  objects.inv
pr-4/: 404.html  index.html  objects.inv
pr-6/: 404.html  index.html
reference/: index.html
src/: __init__.py  calc_knownRp.py  calc_unknownRp.py  constant.py  design_space.py  freezing.py  functions.py  main.py  opt_Pch.py  opt_Pch_Tsh.py  opt_Tsh.py
test_data/: README.md  badexample_optimizer_noopt.yaml  badexample_unknownkvrp.yaml  example_design_space.yaml  example_freezing.yaml  example_knownrp.yaml  example_opt_pch.yaml  example_opt_pch_tsh.yaml  example_opt_tsh.yaml  example_unknownkv.yaml  example_unknownrp.yaml  reference_design_space.csv  reference_freezing.csv  reference_opt_Pch.csv  reference_opt_Tsh.csv  reference_optimizer.csv  reference_primary_drying.csv
tests/: README.md  __init__.py  conftest.py  test_calc_knownRp.py  (+19 more)
(+132 files in other folders)
